--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  web:
+  nginx:
     image: "nginx:alpine"
     ports:
       - "127.0.0.1:80:80"
@@ -17,3 +17,4 @@ services:
       test: curl -f http://nginx | grep works || exit 1
       interval: 1s
       timeout: 10s
+      retries: 3
